--- a/Homework5/gs-yarn-basic-client/pom.xml
+++ b/Homework5/gs-yarn-basic-client/pom.xml
@@ -13,12 +13,12 @@
         <artifactId>Homework5</artifactId>
     </parent>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-    </dependencies>
+    <!--<dependencies>-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter</artifactId>-->
+        <!--</dependency>-->
+    <!--</dependencies>-->
 
     <build>
         <plugins>
